src/styles.css
h1 {
  position: relative;
  left: 82px;
  top: -58px;
}
a {
  text-decoration: none;
}

.city-name {
  font-weight: 600;
}
.content-border {
  max-width: 700px;
  padding: 20px;
  margin: 40px 0px 0px;
  border: 1px solid black;
  max-height: 480px;
  border-radius: 5px;
}
.city {
  width: 60%;
  margin-top: 20px;
  margin-bottom: 35px;
  margin-right: 20px;
}
.city-info {
  position: relative;
  list-style: none;
  right: -317px;
  font-size: 20px;
  line-height: 25px;
  top: -155px;
  text-transform: capitalize;
}
.city-info li {
  font-size: 18px;
}
.moisture {
  position: relative;
  padding: 0;
  list-style: none;
  line-height: 18px;
  margin: 20px;
  left: -18px;
  font-size: 15px;
  bottom: 140px;
}
.forecast {
  position: relative;
  bottom: 100px;
  margin-right: 130px;
}

.temp-type {
  position: relative;
  top: -110px;
  left: 142px;
  text-decoration: none;
  font-size: 18px;
}
.temp-type .active {
  color: black;
  cursor: default;
}

.btn-success {
  position: relative;
  left: 15px;
}

.forecast {
  margin-top: 20px;
  text-align: center;
  color: black;
}
.weather-forecast-date {
  font-size: 16px;
  opacity: 0.6;
}
.weather-forecast-temperatures {
  font-size: 13px;
}
.weather-forecast-temperature-min {
  opacity: 0.6;
}
.footer {
  font-size: 14px;
}

